src/styles/StoresPage.module.css
.productsPage {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.productsGrid {
  width: 100%;
}

.product {
  height: 380px;
  /* min-width: 150px; */
  transition: box-shadow 0.2s ease-in-out;
  cursor: pointer;
}

.product:hover {
  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
}

.container {
  display: flex;
  flex-wrap: nowrap;
  overflow-x: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.container::-webkit-scrollbar {
  display: none;
}

